--- a/kaggle_astro_git.ipynb
+++ b/kaggle_astro_git.ipynb
@@ -186,7 +186,7 @@
     "    # load the model from disk IsolationForest\n",
     "    filename = '..\\\\ISF.sav'\n",
     "    isf = pickle.load(open(filename, 'rb'))\n",
-    "    print(\"Outlayer model saved\")\n",
+    "    print(\"Outlayer model loaded\")\n",
     "    \n",
     "#     # load the model from disk LocalOutlayerFactor\n",
     "#     filename = '..\\\\LOF.sav'\n",
@@ -310,9 +310,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)\n",
     "def predictions(predicted_dataframe, object_id):\n",
     "    \"\"\"Search rows with low prediction accuracy, if none of class was predicted higher then 0.6, classify as outlayer.\n",
     "    Add class_99 column for outlayers\"\"\"\n",
@@ -327,11 +331,19 @@
     "def predictions_ISF(predicted_dataframe, object_id, data, isf):\n",
     "    \"\"\"Use IsolationForest to classify if there is an outlayer, unseen label/class\"\"\"\n",
     "    columns = predicted_dataframe.columns.values.tolist()\n",
+    "    n_samples = 1000000\n",
+    "    l_data = len(data)\n",
+    "    \n",
     "    start = time.time()\n",
-    "    class_99 = isf.predict(data) # IsolationForest predicts if sample is outlayer (-1 or inlayer 1)\n",
-    "    class_99 = class_99[class_99 == -1] = 0 # change inlayers to 0 value\n",
+    "    class_99 =  np.array([])\n",
+    "    for i in range(n_samples, l_data, n_samples): # IsolationForest cannot handle big datasets (32GB of RAM allocation is not enough)\n",
+    "        class_99 = np.append(class_99, isf.predict(data[i-n_samples:i])) # IsolationForest predicts if sample is outlayer (-1 or inlayer 1)\n",
+    "        print(\"Batch {} of {}, elapsed time: {}\".format(i/n_samples, round(l_data/n_samples), time.time()-start))\n",
+    "    class_99 = np.append(class_99, isf.predict(data[l_data-l_data%n_samples:]))\n",
+    "    class_99[class_99 == -1] = 0 # change inlayers to 0 value\n",
     "    predicted_dataframe[\"class_99\"] = class_99 # append predictions with new class column\n",
     "    end = time.time()\n",
+    "    \n",
     "    print(\"After search, elapsed time: {}\".format(end-start))\n",
     "    predicted_dataframe.insert(0,\"object_id\",object_id)\n",
     "    \n",
@@ -370,7 +382,7 @@
     "#     predictions(predicted_et, object_id)\n",
     "    \n",
     "    start = time.time()\n",
-    "    predicted_et.to_csv(\"..\\\\predicted_et_{}.csv\".format(i))\n",
+    "    predicted_et.to_csv(\"..\\\\predicted_et_n_{}.csv\".format(i))\n",
     "    end = time.time()\n",
     "    print(\"Part {} Save to CSV Elapsed time: {}\".format(i, end-start))\n",
     "    %xdel dataset_merged\n",
@@ -435,7 +447,7 @@
     "# compute grouped results for each object_id\n",
     "for i in range(1,11):\n",
     "    start = time.time()\n",
-    "    dataset = pd.read_csv(\"..\\\\predicted_et_{}.csv\".format(i), index_col=0)\n",
+    "    dataset = pd.read_csv(\"..\\\\predicted_et_n_{}.csv\".format(i), index_col=0)\n",
     "    print(\"predicted_et loaded, time elapsed: {}\".format(time.time()-start))\n",
     "#     grouped = dataset.groupby(by=\"object_id\").apply(lambda x: find_best_row(x)).reset_index(level=1, drop=True).drop([\"object_id\"], axis=1)\n",
     "#     print(\"Dataset grouped and best row found. time elapsed: {}\".format(time.time() - start))\n",
@@ -461,6 +473,13 @@
     "dataset.to_csv(\"..\\\\LSST_project_prediction_mean_ISF.csv\", index=False)\n",
     "%xdel dataset"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
